--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <html>
   
-<link href="https://fonts.googleapis.com/css?family=Libre+Barcode+128+Text" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Libre+Barcode+128+Text" rel="stylesheet"/>
+	 <link rel="stylesheet" href="style.css"/>
+	 <script src="script.js"></script>
 <div id="main">
 		<div class="calculator">
 		<input type="text" id="screen">
