--- a/index.html
+++ b/index.html
@@ -1,8 +1,140 @@
+<!DOCTYPE html>
 <html>
+
+<head>
+    <meta charset="UTF-8" />
+    <link rel='stylesheet' href='https://use.fontawesome.com/releases/v5.3.1/css/all.css'><link rel="stylesheet" href="style.css">
+	<link href="https://fonts.googleapis.com/css?family=Libre+Barcode+128+Text" rel="stylesheet"/>
+
+    <style>
+	body {
+  padding: 5%;
+  margin: 0 auto;
+  text-align: center;
+  font-size: 23px;
+  color: white;
+  background: black;
+}
+
+.main {
+  max-width: 10%;
+}
+
+a,
+a:visited  {
+  color: goldenrod;
+}
+
+.dark {
+  background: darkgray;
+}
+
+.button > .over {
+  text-decoration:overline;
+  display: inline-block;
+  position:relative;
+  top: 3px;
+  left: -4px;
+}
+
+.calculator {
+  display: inline-block;
+  background: white;
+  margin: 1% 0;
+  color: black;
+  border-radius: 5%;
+  border: 3px solid black;
+  box-shadow: 5px 5px 5px 3px gray;
   
-<link href="https://fonts.googleapis.com/css?family=Libre+Barcode+128+Text" rel="stylesheet"/>
-	 <link rel="stylesheet" href="style.css"/>
-	 <script src="script.js"></script>
+}
+
+.calculator button {
+  font-size: x-large;
+  width: 4em;
+  min-height: 3em;
+  margin: 0.8%;
+  border-radius: 25%;
+  border: 1px solid black;
+  box-shadow: 3px 3px 3px gray;
+}
+
+.calculator button:hover,
+#clear:hover,
+#backspace:hover {
+  background: gold;
+  color: white;
+  transform: scale(0.9);
+  border-radius: 20%;
+}
+
+.calculator button:focus,
+#clear:focus,
+#backspace:focus {
+  outline: none;
+}
+
+.button:active,
+.button-active {
+  background: gold;
+  color: white;
+  transform: scale(0.9);
+}
+
+ #screen{
+  background: darkgray;
+  border: 3px solid black;
+  box-shadow: 3px 3px 3px 3px gray;
+  border-radius: 5%;
+  width: 80%;
+  height: 120px;
+  margin-left: 5%;
+  margin-right: 5%;
+  margin-top: 5%;
+  text-align: right;
+  overflow: auto;
+  overflow-wrap: break-word;
+  font-size: 60px;
+
+}
+
+    
+
+
+#clean {
+  background: salmon;
+}
+
+
+.calculator__row1,
+.calculator__row2,
+.calculator__row3,
+.calculator__row4,
+.calculator__row5 {
+  display: flex;
+  margin: 0 auto;
+     max-width: 80%;
+  justify-content: space-around;
+  align-items: center;
+  font-family: 'Libre Barcode 128 Text', cursive;
+}
+
+.calculator__row5 {
+  margin-bottom: 3%;
+} 
+
+.footer {
+  /* margin-top: 2%;
+  font-size: medium; */
+  position: absolute;
+  left: 0;
+  right: 0;
+  bottom: 0;
+}
+	</style>
+</head>
+
+  
+<body>
 <div id="main">
 		<div class="calculator">
 		<input type="text" id="screen">
@@ -51,4 +183,178 @@
 </div>
 </div>
 </div>
+
+	<script type="text/javascript" src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
+
+<script>
+	var display = document.getElementById("screen");
+var buttons = document.getElementsByClassName("button");
+  
+  Array.prototype.forEach.call(buttons, function(button) {
+  button.addEventListener("click", function() {
+    if (button.textContent != "=" && 
+    button.textContent != "AC" && 
+    button.textContent != "*" && 
+    button.textContent != "/" && 
+    button.textContent != "√" && 
+    button.textContent != "+" && 
+    button.textContent != "%" && 
+    button.textContent != "=" && 
+    button.textContent != "-" && 
+    button.textContent != "sin" && 
+    button.textContent != "cos" && 
+    button.textContent != "tan" && 
+    button.textContent != "log" && 
+    button.textContent != "ln" && 
+    button.textContent != "x^" && 
+    button.textContent != "x!" && 
+    button.textContent != "pi" && 
+    button.textContent != "Rad" 
+    && button.textContent != "Deg") {
+      display.value += button.textContent;
+    } else if (button.textContent === "=") {
+      equals();
+    } else if (button.textContent === "AC") {
+      clear();
+    } else if (button.textContent === "*") {
+      multiply();
+    } else if (button.textContent === "/") {
+      divide();
+    } else if (button.textContent === "+") {
+      plus();
+      } else if (button.textContent === "-") {
+      Minus();
+    } else if (button.textContent === "%") {
+      percent();
+    } else if (button.textContent === "pi") {
+      pi();
+    } else if (button.textContent === "√") {
+      squareRoot();
+    } else if (button.textContent === "sin") {
+      sin();
+    } else if (button.textContent === "cos") {
+      cos();
+    } else if (button.textContent === "tan") {
+      tan();
+    } else if (button.textContent === "log") {
+      log();
+    } else if (button.textContent === "ln") {
+      ln();
+    } else if (button.textContent === "x^") {
+      exponent();
+    } else if (button.textContent === "x!") {
+      factorial();
+    } else if (button.textContent === "Rad") {
+      radians();
+    } else if (button.textContent === "Deg") {
+      degrees();
+    }
+  });
+});
+
+
+function syntaxError() {
+  if (eval(display.value) == SyntaxError || eval(display.value) == ReferenceError || eval(display.value) == TypeError) {
+    display.value == "Syntax Error";
+  }
+}
+
+
+function equals() {
+  if ((display.value).indexOf("^") > -1) {
+    var base = (display.value).slice(0, (display.value).indexOf("^"));
+    var exponent = (display.value).slice((display.value).indexOf("^") + 1);
+    display.value = eval("Math.pow(" + base + "," + exponent + ")");
+  } else {
+    display.value = eval(display.value)
+    checkLength()
+    syntaxError()
+  }
+}
+
+function clear() {
+  display.value = "";
+}
+
+
+function multiply() {
+  display.value += "*";
+}
+
+function divide() {
+  display.value +=  "/";
+}
+function plus() {
+  display.value +=  "+";
+}
+
+function Minus() {
+  display.value +=  "-";
+}
+
+function factorial() {
+  var number = 1;
+  if (display.value === 0) {
+    display.value = "1";
+  } else if (display.value < 0) {
+    display.value = "undefined";
+  } else {
+    var number = 1;
+    for (var i = display.value; i > 0; i--) {
+      number *=  i;
+    }
+    display.value = number;
+  }
+}
+
+function pi() {
+  display.value = (display.value * Math.PI);
+}
+
+function square() {
+  display.value = eval(display.value * display.value);
+}
+
+function squareRoot() {
+  display.value = Math.sqrt(display.value);
+}
+
+function percent() {
+  display.value = display.value / 100;
+}
+
+function sin() {
+  display.value = Math.sin(display.value);
+}
+
+function cos() {
+  display.value = Math.cos(display.value);
+}
+
+function tan() {
+  display.value = Math.tan(display.value);
+}
+
+function log() {
+  display.value = Math.log10(display.value);
+}
+
+function ln() {
+  display.value = Math.log(display.value);
+}
+
+function exponent() {
+  display.value += "^";
+}
+
+
+function radians() {
+  display.value = display.value * (Math.PI / 180);
+}
+
+function degrees() {
+  display.value = display.value * (180 / Math.PI);
+}
+</script>
+</body>
 </html>
